# cargo-version-sync

./: .travis.yml  Cargo.toml  README.md  aliases.js  index.html  search-index.js
.cargo-husky/hooks/: pre-commit
cargo_version_sync/: all.html  fn.assert_version_sync.html  index.html  sidebar-items.js
cargo_version_sync/assert/: assert_version_sync.v.html  fn.assert_version_sync.html
cargo_version_sync/runner/: index.html  sidebar-items.js  struct.Runner.html
doctest/: Cargo.toml  lib.rs
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Send.js  trait.Sync.js
src/: assert.rs  changeset.rs  lib.rs  main.rs  manifest.rs  replacer.rs  runner.rs  util.rs
src/cargo_version_sync/: assert.rs.html  changeset.rs.html  lib.rs.html  manifest.rs.html  replacer.rs.html  runner.rs.html
testcrate/: .gitignore  Cargo.toml  README.md
testcrate/.cargo-husky/hooks/: pre-commit
testcrate/src/: lib.rs
testcrate/tests/: version_sync.rs
