[package]
name = "cargo-version-sync"
version = "0.0.5"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT"
repository = "https://github.com/ubnt-intrepid/cargo-prerelease.git"
readme = "README.md"
description = """
Cargo subcommand for keeping the version numbers in sync with Cargo.toml
"""

include = [
  "/Cargo.toml",
  "/README.md",
  "/LICENSE",
  "/build.rs",
  "/src/**/*.rs",
  "/tests/**/*.rs",
  "/examples/**/*.rs",
  "/benches/**/*.rs",
]

[package.metadata.version-sync]
use-preset = true

[lib]
name = "cargo_version_sync"
path = "src/lib.rs"

[[bin]]
name = "cargo-version-sync"
path = "src/main.rs"
doc = false
required-features = ["bin"]

[dependencies]
chrono = "0.4.6"
failure = "0.1.3"
regex = "1.0.5"
serde = { version = "1", features = ["derive"] }
toml = "0.4.8"

structopt = { version = "0.2.12", optional = true }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[features]
default = ["bin"]
bin = ["structopt"]

[workspace]
members = [
  "doctest",
]
exclude = [
  "testcrate",
]
